--- a/app/design/frontend/base/default/template/checkout/onepage/shipping.phtml
+++ b/app/design/frontend/base/default/template/checkout/onepage/shipping.phtml
@@ -49,7 +49,7 @@
                     </li>
             <?php $_streetValidationClass = $this->helper('customer/address')->getAttributeValidationClass('street'); ?>
                     <li class="wide">
-                        <label for="shipping:street1" class="required"><em>*</em><?php echo $this->__('Bairro') ?></label>
+                        <label for="shipping:street1" class="required"><em>*</em><?php echo $this->__('Rua') ?></label>
                         <div class="input-box">
                             <input type="text" title="<?php echo Mage::helper('core')->quoteEscape($this->__('Street Address')) ?>" name="shipping[street][]" id="shipping:street1" value="<?php echo $this->escapeHtml($this->getAddress()->getStreet(1)) ?>" class="input-text <?php echo $_streetValidationClass ?>" onchange="shipping.setSameAsBilling(false);" />
                         </div>
@@ -59,13 +59,13 @@
 					<?php 
 						switch ($_i) {
 							case 2:
-								echo '<label for="billing:street['.$_i.']" class="required"><em>*</em>Endereço</label>';
-								break;
-							case 3:
 								echo '<label for="billing:street['.$_i.']" class="required"><em>*</em>Número</label>';
 								break;
-							case 4:
+							case 3:
 								echo '<label for="billing:street['.$_i.']" class="required"><em>*</em>Complemento</label>';
+								break;
+							case 4:
+								echo '<label for="billing:street['.$_i.']" class="required"><em>*</em>Bairro</label>';
 								break;
 						}
 					?>
