--- a/app/design/frontend/base/default/template/customer/address/edit.phtml
+++ b/app/design/frontend/base/default/template/customer/address/edit.phtml
@@ -74,7 +74,7 @@
         <ul class="form-list">
         <?php $_streetValidationClass = $this->helper('customer/address')->getAttributeValidationClass('street'); ?>
             <li class="wide">
-                <label for="street_1" class="required"><em>*</em><?php echo $this->__('Bairro') ?></label>
+                <label for="street_1" class="required"><em>*</em><?php echo $this->__('Rua') ?></label>
                 <div class="input-box">
                     <input type="text" name="street[]" value="<?php echo $this->escapeHtml($this->getAddress()->getStreet(1)) ?>" title="<?php echo Mage::helper('core')->quoteEscape($this->__('Street Address')) ?>" id="street_1" class="input-text <?php echo $_streetValidationClass ?>" />
                 </div>
@@ -84,13 +84,13 @@
 				<?php 
 					switch ($_i) {
 						case 2:
-							echo '<label for="billing:street['.$_i.']" class="required"><em>*</em>Endereço</label>';
-							break;
-						case 3:
 							echo '<label for="billing:street['.$_i.']" class="required"><em>*</em>Número</label>';
 							break;
-						case 4:
+						case 3:
 							echo '<label for="billing:street['.$_i.']" class="required"><em>*</em>Complemento</label>';
+							break;
+						case 4:
+							echo '<label for="billing:street['.$_i.']" class="required"><em>*</em>Bairro</label>';
 							break;
 					}
 				?>
